--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://mongo:mongo@mongodb-service:27017/StudentDBMS
+MONGO_URL=mongodb://mongo:mongo@mongodb-service:27017
 JWT_SECRET=167372fa-730d-4db1-9da0-963401407545
 USER_SIGNUP=/signup
 USER_LOGIN=/login
